syntax = "proto3";
package rarimo.rarimocore.cscalist;

import "gogoproto/gogo.proto";
import "cscalist/cscalist.proto";

option go_package = "github.com/rarimo/rarimo-core/x/cscalist/types";

message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Node tree = 2 [(gogoproto.nullable) = false];
}
